Server is now up and running, as well a simple scene and some objects

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My App</title>
+    <title>WebGPU Demo</title>
 </head>
 <body>
-    <h1>Welcome to My App</h1>
+    <canvas id="gpuCanvas" width="1080" height="720" style="border:1px solid black;"></canvas>
     <script src="bundle.js"></script>
 </body>
 </html>
