Added aspect ratio and full screen

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebGPU Demo</title>
+    <link rel="stylesheet" href="canvas.css">
 </head>
 <body>
-    <canvas id="gpuCanvas" width="1080" height="720" style="border:1px solid black;"></canvas>
+        <canvas id="gpuCanvas"></canvas>
+    
     <script src="bundle.js"></script>
 </body>
 </html>
