--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,9 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebGPU Demo</title>
     <link rel="stylesheet" href="canvas.css">
+    <link rel="stylesheet" href="chat.css">
 </head>
 <body>
-        <canvas id="gpuCanvas"></canvas>    
+    <div id="chat-container">
+        <div id="chat-box">
+            <div id="messages"></div>
+            <input type="text" id="chat-input" placeholder="How can I help you?...">
+            <button type="button" id="send-btn">Send</button>
+            <button type="button" id="record-btn" class="stopped">Record</button>
+        </div>
+    </div>
+    <canvas id="gpuCanvas"></canvas>    
     <script src="bundle.js"></script>
 </body>
 </html>
