Rendering multiple canvases at the time

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -19,7 +19,12 @@
             </div>
         </div>
     </div>
-    <canvas id="gpuCanvas"></canvas>    
+    <!-- Add a container for the canvases -->
+
+    <div id="canvas-container">
+        <canvas id="gpuCanvas"></canvas>
+        <canvas id="gpuCanvas2"></canvas>
+    </div>
     <script src="bundle.js"></script>
 </body>
 </html>
