--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -23,8 +23,11 @@
 
     <div id="canvas-container">
         <canvas id="gpuCanvas"></canvas>
-        <canvas id="gpuCanvas2"></canvas>
+<!-- <canvas id="gpuCanvas2"></canvas> -->
     </div>
-    <script src="bundle.js"></script>
+    <!-- Assuming the main entry chunk is named 'main.js' and located in the 'output' directory -->
+    <script type="module" src="output/main.js"></script>
+
+    <!-- <script src="bundle.js"></scri pt> -->
 </body>
 </html>
