--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -22,8 +22,8 @@
     <!-- Add a container for the canvases -->
 
     <div id="canvas-container">
-        <canvas id="gpuCanvas"></canvas>
-<!-- <canvas id="gpuCanvas2"></canvas> -->
+        <!-- <canvas id="gpuCanvas"></canvas> -->
+        <canvas id="gpuCanvas2"></canvas>
     </div>
     <!-- Assuming the main entry chunk is named 'main.js' and located in the 'output' directory -->
     <script type="module" src="output/main.js"></script>
