We can cycle through the datasets, need to update its context next

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,7 @@
     <title>WebGPU Demo</title>
     <link rel="stylesheet" href="canvas.css">
     <link rel="stylesheet" href="chat.css">
+    <link rel="stylesheet" href="dat-gui.css">
 </head>
 <body>
     <div id="chat-container">
@@ -15,7 +16,7 @@
             <div id="chat-input-container">
                 <input type="text" id="chat-input" placeholder="Type a message...">
                 <button type="button" id="send-btn">Send</button>
-                <button type="button" id="record-btn" class="stopped">Record</button>
+                <!-- <button type="button" id="record-btn" class="stopped">Record</button> -->
             </div>
         </div>
     </div>
