--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,25 +10,11 @@
     <link rel="stylesheet" href="dat-gui.css">
 </head>
 <body>
-    <div id="chat-container">
-        <div id="chat-box">
-            <div id="messages"></div>
-            <div id="chat-input-container">
-                <input type="text" id="chat-input" placeholder="Type a message...">
-                <button type="button" id="send-btn">Send</button>
-                <!-- <button type="button" id="record-btn" class="stopped">Record</button> -->
-            </div>
-        </div>
-    </div>
-    <!-- Add a container for the canvases -->
 
     <div id="canvas-container">
-        <!-- <canvas id="gpuCanvas"></canvas> -->
-        <canvas id="gpuCanvas2"></canvas>
+        <canvas id="gpuCanvas"></canvas>
+        <!-- <canvas id="gpuCanvas2"></canvas> -->
     </div>
-    <!-- Assuming the main entry chunk is named 'main.js' and located in the 'output' directory -->
     <script type="module" src="output/main.js"></script>
-
-    <!-- <script src="bundle.js"></scri pt> -->
 </body>
 </html>
