--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebGPU Demo</title>
     <link rel="stylesheet" href="canvas.css">
     <link rel="stylesheet" href="chat.css">
@@ -11,6 +11,7 @@
 </head>
 <body>
     <div id="chat-container">
+        <!-- <div id="chat-resize-bar"></div>  -->
         <div id="chat-box">
             <div id="messages"></div>
             <div id="chat-input-container">
