Compute shader working fine, and somehow the cube as well

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,13 +39,13 @@
 
 
          <!-- Colorbar Legend -->
-        <div class="gui-section">
+        <!-- <div class="gui-section">
             <div class="colorbar">
                 <span id="min-elevation" class="colorbar-label">0</span>
                 <div class="colorbar-gradient"></div>
                 <span id="max-elevation" class="colorbar-label">100</span>
             </div>
-        </div>
+        </div> -->
     </div>
     <script type="module" src="output/main.js"></script>
 </body>
