--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,36 +17,20 @@
         <!-- <canvas id="gpuCanvas2"></canvas> -->
     </div>
     <!-- Simple GUI Overlay -->
-    <div id="gui-overlay">
+    <!-- <div id="gui-overlay">
         <div class="gui-section">
             <p>Map | <span id="map-name">Durango</span> | 3601x3601 | 12,967,201 points</p>
             <p>Source | USGS / Earth Explorer</p>
         </div>
 
-    
-        <!-- <div class="gui-section">
-            <button class="gui-button">Now</button>
-            <button class="gui-button"><<</button>
-            <button class="gui-button"><</button>
-            <button class="gui-button">></button>
-            <button class="gui-button">>></button>
-        </div> -->
-        <!-- <div class="gui-section">
-            <button class="gui-button">Air</button>
-            <button class="gui-button">Ocean</button>
-            <button class="gui-button">Waves</button>
-        </div> -->
-
-
-         <!-- Colorbar Legend -->
-        <div class="gui-section">
+        <div class="gui-section" >
             <div class="colorbar">
                 <span id="min-elevation" class="colorbar-label">0</span>
                 <div class="colorbar-gradient"></div>
                 <span id="max-elevation" class="colorbar-label">100</span>
             </div>
         </div>
-    </div>
+    </div> -->
     <script type="module" src="output/main.js"></script>
 </body>
 </html>
